2001-08-23  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-auth.c (soup_auth_invalidates_prior): Take an
	old_auth argument, if auth_types do not match always return
	TRUE. This allows for a server requested re-auth with a different
	auth mechanism.

2001-08-23  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-ntlm.[ch]: Microsoft NTLM authentication
	support compliments of Dan Winship (danw@ximian.com).

	* src/soup-core/Makefile.am (libsoup_la_SOURCES): Add soup-ntlm.[ch]

	* src/soup-core/soup-auth.c (soup_auth_new_from_header): Set auth
	context before header parsing. Add NTLM case. Call
	auth->parse_func instead of hardcoding.
	(soup_auth_invalidates_prior): add NTLM, which should always
	invalidate.
	(ntlm_new): impl.
	(ntlm_free): impl.
	(ntlm_parse): impl. Hack to get domain from the uri's authmech
	field.
	(ntlm_auth): impl.

	* src/soup-core/soup-dav-server.c (get_depth): return 0 for
	unknown value.

	* src/soup-core/soup-server.h: Remove SoupServerAnonymousToken and
	add SoupServerNTLMToken.

2001-08-20  Joe Shaw  <joe@ximian.com>

	* configure.in: Bump up version to 0.4.4
	* src/soup-core/soup-private.h: Ditto.

	* src/soup-core/soup-auth.c (compute_response, digest_auth_func):
	Instead of just passing uri->path, pass
	uri->path + '?' + uri->querystring if present.

2001-08-17  Alex Graveley  <alex@ximian.com>

	* build/libsoup.def: Update for DAV methods.

2001-08-17  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-dav-server.[ch]: Initial WebDAV server
	support.

	* src/soup-core/soup-dav.[ch]: Beginnings of WebDAV client
	support.

	* configure.in: Add warning about updating
	src/soup-core/soup-private.h when version changes.

	* src/soup-core/soup-private.h: Declare SoupAuth here, so
	including is possible.

2001-08-12  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-ssl.c (soup_ssl_get_iochannel): Connect to
	HUP signal to avoid indefinate hangs. Remove idle waitpid